--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -46,3 +46,9 @@ body {
     position: fixed;
     bottom: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    .inline {
+        display: block;
+    }
+  }
